src/test/resources/Parser/SyntaxErrors/TwiceDefinedLocalVariable.front
class A:
    test(A[] i) {
        i:int32 = 0;
    }